# terraform-review-assistant-microservices

./: .gitignore  README.md  docker-compose.yml  sonar-project.properties
.github/workflows/: build.yml  ci-cd.yml  codeql.yml  deploy.yml  (+1 more)
apps/api-gateway/: .env.example  Dockerfile  pyproject.toml
apps/api-gateway/app/: __init__.py  bootstrap.py  dependencies.py  main.py  schemas.py
apps/api-gateway/app/core/: config.py  crypto.py  database.py  rate_limit.py  security.py
apps/api-gateway/app/models/: domain.py
apps/api-gateway/app/routers/: auth.py  dashboard.py  projects.py  reviews.py  settings.py
apps/api-gateway/app/services/: audit.py  clients.py  orchestrator.py  provider_detect.py  stages.py
apps/api-gateway/tests/: test_provider_detect.py
argocd/: monitoring-application.yaml  production-ai-review-service-application.yaml  production-api-gateway-application.yaml  production-frontend-application.yaml  production-parser-service-application.yaml  production-reporting-service-application.yaml  production-rules-service-application.yaml  production-scoring-service-application.yaml  production-upload-service-application.yaml
docs/: RESUME-DEPLOYMENT.md  aks-deployment.md  api.md  architecture.md  capstone-coverage.md  database.md  deployment.md  implementation-plan.md  security.md
kubernetes/: configmap.yaml  deployment.yaml  namespace.yaml  networkpolicy.yaml  secret.example.yaml  service.yaml  serviceaccount.yaml
scripts/: bootstrap-tfstate.sh  e2e_smoke.py  run-all-dev.ps1  setup-github-oidc.sh  sync-gitops-manifests.py
services/: README.md
(+115 files in other folders)
