[project]
name = "terraform-review-api"
version = "0.1.0"
description = "FastAPI backend for the AI-Powered Terraform Review Assistant"
requires-python = ">=3.11"
dependencies = [
  "bcrypt>=4.1.3",
  "cryptography>=42.0.5",
  "email-validator>=2.1.1",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.1",
  "pydantic-settings>=2.2.1",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "prometheus-client>=0.20.0",
  "sqlalchemy>=2.0.29",
  "uvicorn[standard]>=0.29.0"
]

[project.optional-dependencies]
azure = [
  "azure-identity>=1.16.0",
  "azure-keyvault-secrets>=4.8.0",
  "azure-storage-blob>=12.19.1",
]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "ruff>=0.4.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501", "UP042"]

[tool.setuptools.packages.find]
include = ["app*"]
